=================
Changes for Crate
=================

Unreleased
==========

NOTE: Upgrading from 0.47 or earlier versions requires a full cluster restart

 - add dynamic settings ``bulk.request_timeout`` and ``bulk.partition_creation_timeout``

 - make the ``sys.shards.size`` expression refresh all 10 seconds maximum

 - Fix: performing queries on a partitioned table could cause unnecessary
   ``execution rejected`` errors

 - Fixed an issue that caused GROUP BY queries with multiple group keys, no
   order by and limit to hang.

 - Add plugin support

 - Increased performance of ``hostname`` and ``id`` expression for ``sys.nodes`` table

 - Removed the limitation that the WHERE clause couldn't contain certain
   expressions in `select count(*)` queries.

 - update crate-admin to 0.12.0 which contains the following changes:

    - display ``rest_url`` from sys.nodes table on node detail view

 - Expose REST URL of node in ``sys.nodes`` table

 - Increased speed and reduced amount of used memory on sorted queries

 - Ordering by `_score` must be defined explictly now even when using a
   `match` predicate.
   Note: This is a backward incompatibility change.

2015/04/28 0.48.3
=================

 - Added possibility to create a single jar which contains all crate packages
   without dependencies

 - Include java client in crate distributions

 - Optimized queries that use ``IN`` or ``ANY``

 - Fix: Prevent COPY FROM or INSERT into a partitioned table to run into timeouts
   when creating many partitions at once

 - Fix: In some cases too few threads where started which could slow
   down queries

 - Fix: Option http.enabled=false caused UDC module to crash on startup

2015/04/21 0.48.2
2015/04/21 0.47.9
=================

 - Fixed an issue with GROUP BY queries on partitioned tables which could lead
   to wrong results

 - Optimized retry logic in bulk and COPY operations to handle
   and coordinate retries once per node
